sumo/tests/traci/VariableSubscription/errors/UnknownVariable/errors.traci
Error: Answered with error to command 164: Unsupported variable specified
Error: Answered with error to command 212: Could not add subscription (Unsupported variable specified).
